# cosmos3-playground

./: .gitignore  LICENSE  README.md  pyproject.toml
cosmos3_playground/: __init__.py  cli.py  cosmos_client.py  modes.py  plugin.py  prebake.py  server.py  upsampler.py
cosmos3_playground/examples/: fd_action_chunks.json  prompt_i2v.txt  prompt_t2i.txt  prompt_t2v.txt
cosmos3_playground/prebaked/: caption.json  fwd_dynamics.json  grounding.json  i2v.json  inv_dynamics.json  physical.json  policy.json  t2i.json  t2v.json  temporal.json  transfer.json  v2v.json  vqa.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  icons.jsx  theme.css
